# InvoiceR

./: .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
invoice_extraction/: __init__.py  aggregator.py  app.py  config.py  excel_exporter.py  exceptions.py  file_handler.py  gemini_manager.py  invoice_extractor.py  logging_config.py  pdf_processor.py  schemas.py
invoice_extraction/ui/: __init__.py  results.py  session.py  sidebar.py  styles.py
tests/: conftest.py  test_aggregator.py  test_config.py  test_excel_exporter.py  test_invoice_extractor.py  test_pdf_processor.py  test_schemas.py
